# face-recognition-attendant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_db.sh
.docs/plan/: implementation-plan.md
.docs/prd/: face-absen-prd.md
.docs/technical/: trd.md
app/: config.py  main.py
app/api/: dependencies.py  routes.py
app/core/: face.py  liveness.py  store.py  types.py
app/db/: models.py  repository.py  session.py
app/schemas/: response.py
app/templates/: enroll.html  index.html
docker/: init.sql
