[project]
name = "face-absen"
version = "0.1.0"
description = "Face Recognition Attendance System"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.15.1",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "databases[postgresql]>=0.7.0",
    "asyncpg>=0.27.0",
    "pgvector>=0.2.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
